// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag component should match snapshot when tag is not selected 1`] = `
<div
  className="filter-tags__tag "
>
  <p>
    tag name
  </p>
</div>
`;

exports[`Tag component should match snapshot when tag is selected 1`] = `
<div
  className="filter-tags__tag filter-tags__tag--selected"
>
  <p>
    tag name
  </p>
</div>
`;
